syntax = "proto3";
import "google/protobuf/wrappers.proto";
package rcppb;

option go_package = "/rcppb";

message LogEntry {
    string logType = 1;
    string nodeId = 2;
    string key = 3;
    string value = 4;
    int64 term = 7;
    string callbackChannelId = 8;
    string bucket = 9;
}

message AppendEntriesReq {
    int64 term = 1;
    string leaderId = 2;
    int64 prevLogIndex = 3;
    int64 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    int64 leaderCommit = 6;
    int64 delay = 7;
}

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
}

message RequestVoteReq {
    int64 term = 1;
    string candidateId = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
    int64 delay = 5;
}

message RequestVoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}

message StoreRequest {
    string key = 1;
    string value = 2;
    string bucket = 3;
}

message GetValueReq {
    string key = 1;
    string bucket = 2;
}

message DeleteReq {
    string key = 1;
    string bucket = 2;
}

message GetValueResponse {
    bool success = 1;
    string value = 2;
}

message PartitionReq {
    repeated string reachableNodes = 1;
}

message DelayRequest {
    string nodeId = 1;
    int64 delay = 2;
}

service RCP {
    rpc AppendEntries(AppendEntriesReq) returns (AppendEntriesResponse) {}
    rpc RequestVote (RequestVoteReq) returns (RequestVoteResponse) {}
    rpc Store(StoreRequest) returns (google.protobuf.BoolValue) {}
    rpc Delete(DeleteReq) returns (google.protobuf.BoolValue) {}
    rpc Get(GetValueReq) returns (GetValueResponse) {}
    rpc SetStatus(google.protobuf.BoolValue) returns (google.protobuf.BoolValue) {}
    rpc Partition(PartitionReq) returns (google.protobuf.BoolValue) {}
    rpc Delay(DelayRequest) returns (google.protobuf.BoolValue) {}
}
